Bug 120990 - make conversion from integer to string faster by not using sprintf. r=khanson, sr=brendan